--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@grimlink/eleventy-plugin-sass",
   "version": "1.0.0",
-  "description": "[![NPM version](https://img.shields.io/npm/v/@grimlink/eleventy-plugin-sass)](https://www.npmjs.org/package/@grimlink/eleventy-plugin-sass) ![license](https://img.shields.io/github/license/GrimLink/eleventy-plugin-sass)",
+  "description": "Simple 11ty config wrapper, for running Sass directly as custom template.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
